# c-optuna

./: README.md  pyproject.toml
src/c_optuna/: __init__.py
src/c_optuna/chapter1/: 1.ipynb
