[project]
name = "c-optuna"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ekusiadadus", email = "ekusiadadus@gmail.com" }
]
dependencies = [
    "optuna>=3.6.1",
    "ipykernel>=6.29.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "plotly>=5.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "c_optuna:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/c_optuna"]
